[gd_scene load_steps=14 format=3 uid="uid://dq40r5nef1gwd"]

[ext_resource type="Script" path="res://scripts/charecters/bosss/ariel_be_like.gd" id="1_coemu"]
[ext_resource type="Texture2D" uid="uid://dgay56jpa41pc" path="res://assets/textures/kjbkdvjfbkjbdv.png" id="2_ka4ff"]
[ext_resource type="Texture2D" uid="uid://bo60orn5dwu8a" path="res://assets/textures/arielush.png" id="3_8rqfc"]
[ext_resource type="Texture2D" uid="uid://bgakmkwqtn6bk" path="res://assets/textures/arielnimation.png" id="4_xompf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wiov"]
size = Vector2(73, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5ijn"]
size = Vector2(97, 101)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwjqj"]
atlas = ExtResource("2_ka4ff")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qhte"]
atlas = ExtResource("3_8rqfc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oumxf"]
atlas = ExtResource("4_xompf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_221we"]
atlas = ExtResource("4_xompf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cre1u"]
atlas = ExtResource("4_xompf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgyei"]
atlas = ExtResource("4_xompf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ynd27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwjqj")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qhte")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oumxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_221we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cre1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgyei")
}],
"loop": true,
"name": &"talk",
"speed": 3.0
}]

[node name="ariel_be_like" type="CharacterBody2D" groups=["ariel"]]
script = ExtResource("1_coemu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 9.5)
shape = SubResource("RectangleShape2D_2wiov")

[node name="player_dead" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_dead"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_j5ijn")

[node name="Arielnimation" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ynd27")
animation = &"talk"
autoplay = "default"
frame_progress = 0.516888

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="summon" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="music_bullet_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="player_dead" to="." method="_on_player_dead_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="summon" to="." method="_on_summon_timeout"]
[connection signal="timeout" from="music_bullet_timer" to="." method="_on_music_bullet_timer_timeout"]
